// Copyright 2025 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package hello.service.v1;

import "google/api/annotations.proto";

option java_package = "com.linecorp.armeria.server.grpc";
option java_multiple_files = true;

message NameRequest {
  string name = 1;
}

message MethodNameReply {
  string message = 1;
}

service CustomVerbServiceBindingTestService {
  rpc Foo (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/foo/{name=**}"
    };
  }

  rpc FooCustomVerb (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/foo/{name=**}:verb"
    };
  }

  rpc FooCustomVerb2 (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/foo/{name=**}:verb2"
    };
  }

  rpc BarCustomVerb (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/bar/{name=**}:verb"
    };
  }

  rpc BarCustomVerb2 (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/bar/{name=**}:verb2"
    };
  }

  rpc Bar (NameRequest) returns (MethodNameReply) {
    option (google.api.http) = {
      get: "/v1/bar/{name=**}"
    };
  }
}
